--- a/Giaovien/styleGV.css
+++ b/Giaovien/styleGV.css
@@ -800,3 +800,384 @@
     width: 80%;
     border-radius: 7px;
 }
+/*----------------------responsive---------------------*/
+/* Tablet (768px – 1023px) */
+@media (min-width: 768px) and (max-width: 1023px) {
+  /* ---------------Tong Quan-------------------------- */
+#TongQuan{
+    margin: 20px;
+    background-color: white;
+}
+/* ---------------thong so-------------------------- */
+#thongSo{
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    border: none;
+    padding: 0px 0px;
+    gap: 20px;
+    flex-wrap: wrap; 
+}
+#tongHS , #coMat, #vangMat, #diMuon{
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    width: 20%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-left: 0px;
+    flex: 1 1 calc(50% - 10px);
+}
+#choChamDiem{
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    width: 50%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-left: 0px;
+}
+#tongHS img{
+    height: 25px;
+    width: 25px;
+    float:right;
+    margin-left: 250px;
+    margin-top: -5px;
+    margin-right: 10px;
+}
+#vangMat img, #diMuon img{
+    height: 25px;
+    width: 25px;
+   float:right;
+   margin-left: 275px;
+    margin-top: -5px;
+    margin-right: 10px;
+}
+#choChamDiem img{
+    height: 25px;
+    width: 25px;
+   float:right;
+   margin-left: 240px;
+    margin-top: -5px;
+    margin-right: 10px;
+}
+#coMat img{
+    height: 25px;
+    width: 25px;
+   float:right;
+   margin-left: 230px;
+    margin-top: -5px;
+    margin-right: 10px;
+}
+#tongHS h4, #coMat h4, #vangMat h4, #diMuon h4, #choChamDiem h4{
+    margin-left: 15px;
+    padding: 0px;
+     margin-right: 130px;
+     display: flex;
+     width: 100%;
+}
+#tongHS p, #vangMat p, #diMuon p, #choChamDiem p{
+    color: gray;
+    margin-left: 0px;
+    margin-right: 130px;
+}
+#coMat p{
+    margin-left: 0px;
+    color: gray;
+    margin-right: 170px;
+}
+#tongHS h2, #coMat h2, #vangMat h2, #diMuon h2, #choChamDiem h2{
+    margin-left: 0px;
+    color: black;
+    font-style: bold;
+     margin-right: 210px;
+}
+
+/*----------------------Lop day---------------------*/
+#LopDay{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    margin-top: 50px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 15px;
+    height: auto;
+}
+#LopDay h3{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+}
+#spanan{
+    visibility: hidden;
+}
+.LOP{
+    border-radius: 15px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding: 20px;
+    margin: 10px;
+    box-sizing: border-box;
+
+    flex: 1 1 calc(50% - 40px);
+    height: auto;        /* QUAN TRỌNG */
+}
+.LOP button{
+    border: 0.5px solid gray;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 10px ;
+    background-color: white;
+    height: 18%;
+    width: 25%;
+    margin-right: 20px;
+    cursor: pointer;
+}
+/*----------------------Hoat Dong---------------------*/
+#HoatDong{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 50px;
+    padding-bottom: 20px;
+}
+#HoatDong h3,#HoatDong p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+}
+.HOATDONGGAN{
+    height: 30%;
+    width: 90%;
+    border-radius: 10px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
+}
+}
+
+/* Mobile (<= 767px) */
+@media (max-width: 767px) {
+  /* ------------thanh thông tin---------------- */
+#Thanhthongtin{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 10px 20px;
+    color: black;
+    border-bottom: 2px solid #ccc;
+}
+#Thanhthongtin img{
+    height: 35px;
+    width: 35px;
+    object-fit: contain;
+}
+#Thanhthongtin button{
+    height: 35px;
+    width: 100px;
+    border-radius: 7px;
+    font-weight: bold;
+   
+}
+#Thanhthongtin button img{
+    height: 15px;
+    width: 15px;
+    margin-right: 15px;
+}
+#ThongTin {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    line-height: 0.2;
+}
+#ThongTin h4,
+#ThongTin h5 {
+  margin: 0;
+  line-height: 1.2;
+}
+#ThongTin h5 {
+  opacity: 0.9;
+}
+/* ------------------------------------------------------*/
+
+/* ---------------thanh menu-------------------------- */
+#menu{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(213, 211, 211);
+    padding: 5px 0;
+    border-radius: 30px;
+}
+#menu button{
+    background-color: transparent;
+    border: none;
+    border-radius: 70px;
+    font-size: 12px;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
+    padding: 10px 20px;
+    width: 33%;
+    height: 95%;
+}
+#menu button:hover{
+    background-color: white;
+    transition: 0.3s;
+}
+/* ---------------Tong Quan-------------------------- */
+#TongQuan{
+    margin: 20px;
+    background-color: white;
+}
+/* ---------------thong so-------------------------- */
+#thongSo{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    height: auto;
+    border: none;
+    padding: 0px 0px;
+    gap: 20px;
+}
+#tongHS , #coMat, #vangMat, #diMuon, #choChamDiem{
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
+    width: 20%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    height: 30%;
+    width: 100%;
+    margin-left: 0px;
+    
+}
+#tongHS img{
+    height: 25px;
+    width: 25px;
+    float:right;
+    margin-left: 170px;
+    margin-top: -5px;
+    margin-right: 0px;
+}
+#vangMat img, #diMuon img{
+    height: 25px;
+    width: 25px;
+   float:right;
+   margin-left: 195px;
+    margin-top: -5px;
+    margin-right: 0px;
+}
+#choChamDiem img{
+    height: 25px;
+    width: 25px;
+   float:right;
+   margin-left: 160px;
+    margin-top: -5px;
+    margin-right: 0px;
+}
+#coMat img{
+    height: 25px;
+    width: 25px;
+   float:right;
+   margin-left: 150px;
+    margin-top: -5px;
+    margin-right: 0px;
+}
+#tongHS h4, #coMat h4, #vangMat h4, #diMuon h4, #choChamDiem h4{
+    margin-left: 15px;
+    padding: 0px;
+     margin-right: 130px;
+     display: flex;
+     width: 100%;
+}
+#tongHS p, #vangMat p, #diMuon p, #choChamDiem p{
+    color: gray;
+    margin-left: 0px;
+    margin-right: 130px;
+}
+#coMat p{
+    margin-left: 0px;
+    color: gray;
+    margin-right: 170px;
+}
+#tongHS h2, #coMat h2, #vangMat h2, #diMuon h2, #choChamDiem h2{
+    margin-left: 0px;
+    color: black;
+    font-style: bold;
+     margin-right: 210px;
+}
+/*----------------------Lop day---------------------*/
+#LopDay{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+}
+#LopDay h3{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+}
+.LOP{
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    height: 60%;
+    width: 90%;
+    margin-top: 15px;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-right: 15px;
+    float: left;
+}
+.LOP button{
+    border: 0.5px solid gray;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    border-radius: 10px ;
+    background-color: white;
+    height: 18%;
+    width: 30%;
+    margin-right: 20px;
+    cursor: pointer;
+}
+/*----------------------Hoat Dong---------------------*/
+#HoatDong{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 50px;
+}
+#HoatDong h3,#HoatDong p{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: black;
+    font-size: 10pt;
+}
+.HOATDONGGAN{
+    height: 30%;
+    width: 90%;
+    border-radius: 10px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 10px;
+}
+}
